bug de z-index e pointer-events arrumado

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -1458,6 +1458,7 @@
 .tagBox
 	position: relative
 	display: block
+	z-index: 3
 
 	.tagBt
 		background: url(img/tag.png) top center no-repeat
@@ -1550,6 +1551,7 @@
 			font-size: 14px
 			font-style: italic
 			font-family: georgia
+			font-weight: bold
 			max-width: 350px
 			margin-top: 10px
 			margin-bottom: 0
