--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -29,6 +29,7 @@
 	-moz-transform: translateX(-50%) translateY(-50%)
 	-ms-transform: translateX(-50%) translateY(-50%)
 	transform: translateX(-50%) translateY(-50%)
+	pointer-events: none
 
 	&.md-scroll
 		top: 110px
@@ -63,6 +64,7 @@
 
 .md-show
 	visibility: visible
+	pointer-events: all
 
 .md-overlay
 	position: fixed
